grammatical errors, and updated coursework

--- a/current/resume.tex
+++ b/current/resume.tex
@@ -57,10 +57,10 @@
 Extracurriculars:
   UpSync Consulting\\
 Coursework:
-  Algorithms,
-  Data Structures,
-  Linear Algebra and Differential Equations,
-  Intro to Cognitive Science
+  Structure and Interpretation (CS 61A),
+  Data Structures (CS 61B),
+  Linear Algebra and Differential Equations (Math 54),
+  Intro to Cognitive Science (Cog Sci 1)
   \subsection{Evergreen Valley College}
   \entry{}{Summer 2018}{4.00 GPA}\\
 Coursework:
@@ -82,10 +82,10 @@ Coursework:
 \subsection{CS88 Academic Intern}
 \entry{UC Berkeley}{Jan 2020 - May 2020}{Berkeley, CA}
 \begin{itemize}
-	\item Reinforce student knowledge of SQL and
+	\item Reinforced student knowledge of SQL and
 	algorithms as member of course staff
-	\item Strong knowledge in control structures, functional programming,
-	OOP, recursion and recursive objects, trees, iterators and generators
+	\item Demonstrated strong knowledge in control structures, functional programming,
+	OOP, recursion \\* and recursive objects, trees, iterators and generators
 	\item Staff weekly reviews for students; focus on conceptual
 	application through projects, homework, and labs
 \end{itemize}
@@ -126,7 +126,7 @@ Coursework:
 
 \section{Skills}
 Languages:
-  Java, Python, Javascript, HTML/CSS, Scheme, SQL \\
+  Java, Python, SQL, Javascript, HTML/CSS, Scheme, Node.js \\
 Human Languages:
   English (native), Konkani (fluent), Spanish (proficient)
 
