--- a/current/resume.tex
+++ b/current/resume.tex
@@ -10,7 +10,7 @@
 \def\faGithub{{\FAB \symbol{"F09B}}} % Github
 
 \setmainfont{Poppins}
-	\pagenumbering{gobble}
+\pagenumbering{gobble}
 \linespread{1.1}
 
 \definecolor{green}{rgb}{0,.796,0.471} % #00cb78
@@ -34,101 +34,102 @@
 \newcommand{\entry}[3]{\quad\textbf{#1}\\#2\qquad#3}
 
 \renewcommand{\maketitle}{
-  \begin{flushleft}
-    \fontspec{Poppins Bold}\Huge\bfseries\theauthor
-  \end{flushleft}
-  \begin{bfseries}
-    \faEmail    \hspace{1pt} \href{mailto:jkudva@berkeley.edu}{jkudva@berkeley.edu} \quad
-    \faPhone    \hspace{1pt} (408) 410-1785 \quad
-    \faLinkedin \hspace{1pt} \myhref{linkedin.com/in/jaykudva} \quad
-    \faGithub   \hspace{1pt} \myhref{github.com/jaykudva}
-  \end{bfseries}
+	\begin{flushleft}
+		\fontspec{Poppins Bold}\Huge\bfseries\theauthor
+	\end{flushleft}
+	\begin{bfseries}
+		\faEmail    \hspace{1pt} \href{mailto:jkudva@berkeley.edu}{jkudva@berkeley.edu} \quad
+		\faPhone    \hspace{1pt} (408) 410-1785 \quad
+		\faLinkedin \hspace{1pt} \myhref{linkedin.com/in/jaykudva} \quad
+		\faGithub   \hspace{1pt} \myhref{github.com/jaykudva}
+	\end{bfseries}
 }
 
 
 \begin{document}
-\author{\color{blue}Jay Kudva}
-\maketitle
-
-
-\section{Education}
-\subsection{University of California, Berkeley}
-\entry{Computer Science BA}{Aug 2019 - May 2023}{3.58 GPA}\\
-Extracurriculars:
-  UpSync Consulting\\
-Coursework:
-  Structure and Interpretation (CS 61A),
-  Data Structures (CS 61B),
-  Linear Algebra and Differential Equations (Math 54),
-  Intro to Cognitive Science (Cog Sci 1)
-  \subsection{Evergreen Valley College}
-  \entry{}{Summer 2018}{4.00 GPA}\\
-Coursework:
-  Introduction to Business,
-  Introduction to Entrepreneurship
-  
-
-
-\section{Experience}
-
-\subsection{Business Consultant}
-\entry{UpSync Consulting}{Feb 2020 - Current}{Berkeley, CA}
-\begin{itemize}
-	\item Developed product marketing strategies
-	\item Conducted product testing
-	\item Composed design strategies for launch
-\end{itemize}
-
-\subsection{CS88 Academic Intern}
-\entry{UC Berkeley}{Jan 2020 - May 2020}{Berkeley, CA}
-\begin{itemize}
-	\item Reinforced student knowledge of SQL and
-	algorithms as member of course staff
-	\item Demonstrated strong knowledge in control structures, functional programming,
-	OOP, recursion \\* and recursive objects, trees, iterators and generators
-	\item Staff weekly reviews for students; focus on conceptual
-	application through projects, homework, and labs
-\end{itemize}
-
-\subsection{Chief Executive Officer}
-\entry{Bord Payment Systems, LLC}{June 2018 - Sept 2019}{San Jose, CA}
+	\author{\color{blue}Jay Kudva}
+	\maketitle
+	
+	
+	\section{Education}
+	\subsection{University of California, Berkeley}
+	\entry{Computer Science BA}{Aug 2019 - May 2023}{3.671 GPA}\\
+	Extracurriculars:
+	UpSync Consulting\\
+	Coursework:
+	Structure and Interpretation (CS 61A),
+	Data Structures (CS 61B),
+	Linear Algebra and Differential Equations (Math 54),
+	Intro to Cognitive Science (Cog Sci 1)
+	\subsection{Evergreen Valley College}
+	\entry{}{Summer 2018}{4.00 GPA}\\
+	Coursework:
+	Introduction to Business,
+	Introduction to Entrepreneurship
+	
+	
+	
+	\section{Experience}
+	
+	\subsection{Business Consultant}
+	\entry{UpSync Consulting}{Feb 2020 - Current}{Berkeley, CA}
 	\begin{itemize}
-		\item Constructed group payment platform using MongoDB
+		\item Developed product marketing strategies
+		\item Conducted product testing
+		\item Composed design strategies for launch
+	\end{itemize}
+	
+	\subsection{CS88 Academic Intern}
+	\entry{UC Berkeley}{Jan 2020 - May 2020}{Berkeley, CA}
+	\begin{itemize}
+		\item Reinforced student knowledge of SQL and
+		algorithms as member of course staff
+		\item Demonstrated strong knowledge in control structures, functional programming,
+		OOP, recursion \\* and recursive objects, trees, iterators and generators
+		\item Hosted weekly reviews for students; focus on conceptual
+		application through projects, homework, and labs
+	\end{itemize}
+	
+	\subsection{Chief Executive Officer}
+	\entry{Bord Payment Systems, LLC}{June 2018 - Sept 2019}{San Jose, CA}
+	\begin{itemize}
+		\item Constructed group payment platform using Bootstrap, Node.JS, and MongoDB
 		\item Designed several iterations of the pitchdeck and pitched to 14 Angel Investors
 		\item Secured \$10,000 Angel investment
 		\item Filed for a patent and managed team of 5
-		\item Ran a field trial of the solution in San Jose, CA
 	\end{itemize}
-\subsection{Site Administrator}
-\entry{Allstars Education Foundation}{May 2018 - Aug 2018}{San Jose, CA}
-\begin{itemize}
-	\item Managed 350 students and 29 employees comprised of teachers, teaching staff, and sports coaches
-	\item Co-developed English, Math, Speech \& Debate, and Robotics curriculum
-	\item Oversaw day-to-day operations through management of registration and enrollment logistics
-\end{itemize}
-
-\section{Projects}
-\subsection{Project SAY-V}
-\entry{}{March 2018}{Java, Google Maps API}
-\begin{itemize}
-  \item Developed a modern-day panic button designed to act as community based alert system
-  \item Implemented live map tracking with real-time updated notifications deployed to users in a pre-determined radius
-  \item Created to raise awareness and prevent rape on college campuses
-\end{itemize}
-
-\subsection{BORD}
-\entry{}{August 2017}{Node.js, Firebase, MongoDB, HTML, CSS, JavaScript (JSON)}
-\begin{itemize}
-  \item Created a group-based, automated, peer-to-peer payment platform
-\end{itemize}
-
-
-
-\section{Skills}
-Languages:
-  Java, Python, SQL, Javascript, HTML/CSS, Scheme, Node.js \\
-Human Languages:
-  English (native), Konkani (fluent), Spanish (proficient)
-
-
+	\subsection{Site Administrator}
+	\entry{Allstars Education Foundation}{May 2018 - Aug 2018}{San Jose, CA}
+	\begin{itemize}
+		\item Managed 350 students and 29 employees comprised of teachers, teaching staff, and sports coaches
+		\item Co-developed English, Math, Speech \& Debate, and Robotics curriculum
+		\item Oversaw day-to-day operations through management of registration and enrollment logistics
+	\end{itemize}
+	
+	\section{Projects}
+	\subsection{Project SAY-V}
+	\entry{}{March 2018}{Java, Google Maps API}
+	\begin{itemize}
+		\item Developed a modern-day panic button designed to act as community based alert system
+		\item Implemented live map tracking with real-time notifications deployed to users in a pre-determined radius
+		\item Created to raise awareness and prevent rape on college campuses
+	\end{itemize}
+	
+	\subsection{BORD}
+	\entry{}{August 2017}{Node.js, Firebase, MongoDB, HTML, CSS, Bootstrap}
+	\begin{itemize}
+		\item Created a group-based, automated, peer-to-peer payment platform
+	\end{itemize}
+	
+	
+	
+	\section{Skills}
+	Languages:
+	Java, Python, SQL, Javascript, HTML/CSS, Scheme, Swift \\
+	Frameworks:
+	React \& Vue.js (with Node.js) \\
+	Human Languages:
+	English (native), Konkani (fluent), Spanish (proficient)
+	
+	
 \end{document}
