[FIX] grammar with bord experience

--- a/current/resume.tex
+++ b/current/resume.tex
@@ -97,7 +97,7 @@
 	\subsection{Chief Executive Officer}
 	\entry{Bord Payment Systems, LLC}{June 2018 - Sept 2019}{San Jose, CA}
 	\begin{itemize}
-		\item Constructed group payment platform using Express.js using Node.JS and MongoDB
+		\item Constructed group payment platform using Express.js with Node.JS and MongoDB
 		\item Designed several iterations of the pitchdeck and pitched to 14 Angel Investors
 		\item Secured \$10,000 Angel investment
 	\end{itemize}
