added linkedin description of bonfire \& opencv to frameworks

--- a/current/resume.tex
+++ b/current/resume.tex
@@ -70,9 +70,10 @@
 	\subsection{Growth Intern \& Internal Developer}
 	\entry{\texorpdfstring{\protect\href{https://bonfire.camp}{Bonfire}}}{June 2020 - Current}{Remote}
 	\begin{itemize}
-		\item Devised growth plans with the CEO
-		\item Developed in-house \& Growth tools primarily in React with Firebase
-		\item Managed and grew all of Bonfire's social media accounts
+	\item Devised short-term and long-term growth strategies through extensive one-on-ones with the CEO
+	\item Created, Pitched, and Implemented design elements
+	\item Developed in-house \& Growth tools primarily in React with Firebase
+	\item Managed content and grew all of Bonfire’s social media accounts
 	\end{itemize}
 	
 	\subsection{Business Consultant}
@@ -89,7 +90,7 @@
 		\item Reinforced student knowledge of SQL and
 		algorithms as member of course staff
 		\item Demonstrated strong knowledge in control structures, functional programming,
-		OOP, recursion \\* and recursive objects, trees, iterators and generators
+		OOP, recursion, and trees
 		\item Hosted weekly reviews for students; focus on conceptual
 		application through projects, homework, and labs
 	\end{itemize}
@@ -127,7 +128,7 @@
 	Languages:
 	Java, Python, SQL, Javascript, HTML/CSS, Scheme, Swift \\
 	Frameworks:
-	React \& Vue.js (with Node.js) \\
+	React.js, Vue.js, Node.js, \& OpenCV \\
 	Human Languages:
 	English (native), Konkani (fluent), Spanish (proficient)
 	
