graphical changes with bold and underlined text, added 170 and econ 1, removed cog sci 1

--- a/current/resume.tex
+++ b/current/resume.tex
@@ -53,15 +53,16 @@
 	
 	\section{Education}
 	\subsection{University of California, Berkeley}
-	\entry{Computer Science BA}{Aug 2019 - May 2023}{3.671 GPA}\\
-	Extracurriculars:
+	\entry{Computer Science BA}{Aug 2019 - May 2023}{3.587 GPA}\\
+	\underline{Extracurriculars}:
 	UpSync Consulting\\
-	Coursework:
-	Structure and Interpretation (CS 61A),
-	Data Structures (CS 61B),
-	Discrete Math and Probability Theory (CS 70).
-	Linear Algebra and Differential Equations (Math 54),
-	Intro to Cognitive Science (Cog Sci 1)
+	\underline{Coursework}:
+	\textbf{CS 61A} Structure and Interpretation,
+	\textbf{CS 61B} Data Structures,
+	\textbf{CS 70} Discrete Math and Probability Theory,
+	\textbf{MATH 54} Linear Algebra and Differential Equations,
+	\textbf{CS 170} Efficient Algorithms,
+	\textbf{ECON 1} Intro to Economics
 	
 	
 	
@@ -126,9 +127,9 @@
 	
 	\section{Skills}
 	Languages:
-	Java, Python, SQL, Javascript, HTML/CSS, Scheme, Swift \\
+	Java, Python, Java Script, HTML5, CSS, Scheme, Swift, MySQL, SQLite \\
 	Frameworks:
-	React.js, Vue.js, Node.js, \& OpenCV \\
+	React.js, VueJS, NodeJS, \& OpenCV \\
 	Human Languages:
 	English (native), Konkani (fluent), Spanish (proficient)
 	
