additions and edits and conclusion date for bonfire itnernship

--- a/current/resume.tex
+++ b/current/resume.tex
@@ -55,13 +55,13 @@
 	\subsection{University of California, Berkeley}
 	\entry{Computer Science BA}{Aug 2019 - May 2023}{3.587 GPA}\\
 	\underline{Extracurriculars}:
-	UpSync Consulting\\
+	UpSync Consulting, Poker @ Berkeley\\
 	\underline{Coursework}:
 	\textbf{CS 61A} Structure and Interpretation,
 	\textbf{CS 61B} Data Structures,
 	\textbf{CS 70} Discrete Math and Probability Theory,
+	\textbf{CS 170} Efficient Algorithms,	
 	\textbf{MATH 54} Linear Algebra and Differential Equations,
-	\textbf{CS 170} Efficient Algorithms,
 	\textbf{ECON 1} Intro to Economics
 	
 	
@@ -69,7 +69,7 @@
 	\section{Experience}
 	
 	\subsection{Growth Intern \& Internal Developer}
-	\entry{\texorpdfstring{\protect\href{https://bonfire.camp}{Bonfire}}}{June 2020 - Current}{Remote}
+	\entry{\texorpdfstring{\protect\href{https://bonfire.camp}{Bonfire}}}{June 2020 - Sep 2020}{Remote}
 	\begin{itemize}
 	\item Devised short-term and long-term growth strategies through extensive one-on-ones with the CEO
 	\item Created, Pitched, and Implemented design elements
