made bonfire description more technical

--- a/current/resume.tex
+++ b/current/resume.tex
@@ -71,10 +71,10 @@
 	\subsection{Growth Intern \& Internal Developer}
 	\entry{\texorpdfstring{\protect\href{https://bonfire.camp}{Bonfire}}}{June 2020 - Sep 2020}{Remote}
 	\begin{itemize}
-	\item Devised short-term and long-term growth strategies through extensive one-on-ones with the CEO
-	\item Created, Pitched, and Implemented design elements
-	\item Developed in-house \& Growth tools primarily in React with Firebase
-	\item Managed content and grew all of Bonfire’s social media accounts
+	\item Implemented large scale website development projects in ReactJS
+	\item Created data aggregation tool in Python with Pandas that tracks influencer audience retention statistics
+	\item Developed in-house \& Growth tools with a backend in Firebase
+	\item Gained experience in iOS development through building workflows in Swift
 	\end{itemize}
 	
 	\subsection{Business Consultant}
@@ -127,9 +127,9 @@
 	
 	\section{Skills}
 	Languages:
-	Java, Python, Java Script, HTML5, CSS, Scheme, Swift, MySQL, SQLite \\
+	Java, Python, Javascript, HTML5, CSS, Scheme, Swift, MySQL, SQLite \\
 	Frameworks:
-	React.js, VueJS, NodeJS, \& OpenCV \\
+	ReactJS, VueJS, NodeJS, \& OpenCV \\
 	Human Languages:
 	English (native), Konkani (fluent), Spanish (proficient)
 	
