--- a/current/resume.tex
+++ b/current/resume.tex
@@ -53,7 +53,7 @@
 	
 	\section{Education}
 	\subsection{University of California, Berkeley}
-	\entry{Computer Science BA}{Aug 2019 - May 2023}{3.587 GPA}\\
+	\entry{Computer Science BA, Economics BA}{Aug 2019 - Dec 2022}{3.672 GPA}\\
 	\underline{Extracurriculars}:
 	UpSync Consulting, Poker @ Berkeley\\
 	\underline{Coursework}:
@@ -62,27 +62,29 @@
 	\textbf{CS 70} Discrete Math and Probability Theory,
 	\textbf{CS 170} Efficient Algorithms,	
 	\textbf{MATH 54} Linear Algebra and Differential Equations,
-	\textbf{ECON 1} Intro to Economics
+	\textbf{ECON 1} Intro to Economics,
+	\textbf{E 120} Engineering Economics
 	
 	
 	
 	\section{Experience}
 	
 	\subsection{Growth Intern \& Internal Developer}
-	\entry{\texorpdfstring{\protect\href{https://bonfire.camp}{Bonfire}}}{June 2020 - Sep 2020}{Remote}
+	\entry{\texorpdfstring{\protect\href{https://bonfire.camp}{Bonfire}}}{May 2020 - Sep 2020}{Remote}
 	\begin{itemize}
-	\item Implemented large scale website development projects in ReactJS
-	\item Created data aggregation tool in Python with Pandas that tracks influencer audience retention statistics
-	\item Developed in-house \& Growth tools with a backend in Firebase
-	\item Gained experience in iOS development through building workflows in Swift
+	\item Built out data aggregation tool in Python with Pandas that tracks audience retention 
+	\item Developed internal tools to drive platform growth utilizing OpenCV, Firebase, and NodeJS
+	\item Created growth applications that received traffic of 10,000 views
+	\item Singlehandedly redesigned the influencer pipeline and built out 3 applications to streamline and automate the process
 	\end{itemize}
 	
-	\subsection{Business Consultant}
+	\subsection{Project Manager \& Business Consultant}
 	\entry{\texorpdfstring{\protect\href{https://www.upsyncberkeley.com}{UpSync Consulting}}}{Feb 2020 - Current}{Berkeley, CA}
 	\begin{itemize}
-		\item Developed product marketing strategies
-		\item Conducted product testing
+		\item Developed product marketing strategies \& conducted product testing
 		\item Composed design strategies for launch
+		\item Created data aggregation models and built out a data analysis pipeline
+		\item Hosted global hackathon with over 450 applicants, and conducted market research on the UGC landscape
 	\end{itemize}
 	
 	\subsection{CS88 Academic Intern}
@@ -92,37 +94,31 @@
 		algorithms as member of course staff
 		\item Demonstrated strong knowledge in control structures, functional programming,
 		OOP, recursion, and trees
-		\item Hosted weekly reviews for students; focus on conceptual
+		\item Hosted weekly reviews for 150+ students; focus on conceptual
 		application through projects, homework, and labs
 	\end{itemize}
 	
 	\subsection{Chief Executive Officer}
 	\entry{Bord Payment Systems, LLC}{June 2018 - Sept 2019}{San Jose, CA}
 	\begin{itemize}
-		\item Constructed group payment platform using Express.js with Node.JS and MongoDB
+		\item Constructed group payment platform using ExpressJS with NodeJS and MongoDB
 		\item Designed several iterations of the pitchdeck and pitched to 14 Angel Investors
 		\item Secured \$10,000 Angel investment
 	\end{itemize}
-	\subsection{Site Administrator}
-	\entry{Allstars Education Foundation}{May 2018 - Aug 2018}{San Jose, CA}
-	\begin{itemize}
-		\item Managed 350 students and 29 employees comprised of teachers, teaching staff, and sports coaches
-		\item Co-developed English, Math, Speech \& Debate, and Robotics curriculum
-		\item Oversaw day-to-day operations through management of registration and enrollment logistics
-	\end{itemize}
 	
 	\section{Projects}
+	\subsection{\texorpdfstring{\protect\href{https://github.com/jaykudva/SlapEmoji}{SlapEmoji}} ?}
+	\entry{}{july 2020}{ReactJS, OpenCV}
+	\begin{itemize}
+		\item Developed an OpenCV based web-app to automatically place an emoji to your face
+		\item Attracted over 2000 MAU to the platform from scratch
+	\end{itemize}
+
 	\subsection{\texorpdfstring{\protect\href{https://github.com/jaykudva/did-you-}{did you?}} ?}
 	\entry{}{May 2020}{Swift, Firebase}
 	\begin{itemize}
-		\item Developed minimal productivity iOS App and gained full stack development experience 
-	\end{itemize}
-	\subsection{Project SAY-V}
-	\entry{}{March 2018}{Java, Google Maps API}
-	\begin{itemize}
-		\item Developed a modern-day panic button designed to act as community based alert system
-		\item Implemented live map tracking with real-time notifications deployed to users in a pre-determined radius
-		\item Created to raise awareness and prevent rape on college campuses
+		\item Created minimal iOS productivity app and gained full stack development experience
+		\item Designed entire app workflow extensively in Sketch
 	\end{itemize}
 	
 	\section{Skills}
@@ -131,7 +127,9 @@
 	Frameworks:
 	ReactJS, VueJS, NodeJS, \& OpenCV \\
 	Human Languages:
-	English (native), Konkani (fluent), Spanish (proficient)
+	English (native), Konkani (fluent), Spanish (proficient) \\
+	General:
+	Linear Programming, Risk Analysis, Algorithm Design, Object-Oriented Design, UI/UX Design
 	
 	
 \end{document}
